force-app/main/default/objects/Interaccion__c/Interaccion__c.object-meta.xml
<CustomObject>
    <label>Interacción</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Nombre de Interacción</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interacciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>