force-app/main/default/objects/Interaccion__c/fields/Archivo_adjunto__c.field-meta.xml
<CustomField>
    <fullName>Archivo_adjunto__c</fullName>
    <formula>IF(Tiene_archivo_adjunto__c,
    IMAGE(&quot;/resource/Clip_de_archivo_adjunto&quot;, &quot;&quot;, 15, 15),
    &quot;&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archivo adjunto</label>
    <type>Text</type>
</CustomField>