force-app/main/default/objects/Interaccion__c/fields/Cantidad_de_archivos_adjuntos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_archivos_adjuntos__c</fullName>
    <label>Cantidad de archivos adjuntos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>