force-app/main/default/objects/Interaccion__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>MOTIVO V.M – COMENTARIOS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>