force-app/main/default/objects/Interaccion__c/fields/COMENTARIOS_HCP__c.field-meta.xml
<CustomField>
    <fullName>COMENTARIOS_HCP__c</fullName>
    <label>COMENTARIOS HCP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>