force-app/main/default/objects/Interaccion__c/fields/Confirmacion_HCP__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_HCP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Seleccionar solamente si el HCP le confirmo la recepción del mensaje.</inlineHelpText>
    <label>Confirmacion HCP</label>
    <type>Checkbox</type>
</CustomField>