force-app/main/default/objects/Interaccion__c/fields/Creado_por__c.field-meta.xml
<CustomField>
    <fullName>Creado_por__c</fullName>
    <formula>IF( CreatedBy.Username = &quot;usuarioappmobile@danone.com&quot;,   Ciclo__r.Owner:User.FirstName + &quot; &quot; + Ciclo__r.Owner:User.LastName ,  CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creado por</label>
    <type>Text</type>
</CustomField>