force-app/main/default/objects/Interaccion__c/fields/Cuenta_de_la_interacci_n__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_de_la_interacci_n__c</fullName>
    <formula>Profesional_de_la_salud__r.FirstName + &apos; &apos; + Profesional_de_la_salud__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta de la interacción</label>
    <type>Text</type>
</CustomField>