force-app/main/default/objects/Interaccion__c/fields/Deja_muestra_medica__c.field-meta.xml
<CustomField>
    <fullName>Deja_muestra_medica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deja muestra médica</label>
    <type>Checkbox</type>
</CustomField>