force-app/main/default/objects/Interaccion__c/fields/Descripcion_de_entrega_de_material__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_entrega_de_material__c</fullName>
    <label>Descripción de entrega de material</label>
    <type>TextArea</type>
</CustomField>