force-app/main/default/objects/Interaccion__c/fields/Es_visita_a_drogueria__c.field-meta.xml
<CustomField>
    <fullName>Es_visita_a_drogueria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es visita a droguería</label>
    <type>Checkbox</type>
</CustomField>