force-app/main/default/objects/Interaccion__c/fields/EsApmAdulto__c.field-meta.xml
<CustomField>
    <fullName>EsApmAdulto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EsApmAdulto</label>
    <type>Checkbox</type>
</CustomField>