force-app/main/default/objects/Interaccion__c/fields/Fecha_devoluci_n_del_HCP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_devoluci_n_del_HCP__c</fullName>
    <inlineHelpText>Fecha en la cuál el HCP genera respuesta sobre un contacto hecho por el APM</inlineHelpText>
    <label>Fecha devolución del HCP</label>
    <type>Date</type>
</CustomField>