force-app/main/default/objects/Interaccion__c/fields/Funcion_del_visitador__c.field-meta.xml
<CustomField>
    <fullName>Funcion_del_visitador__c</fullName>
    <formula>Ciclo__r.Owner:User.Funcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funcion del visitador</label>
    <type>Text</type>
</CustomField>