force-app/main/default/objects/Interaccion__c/fields/Gener_interacci_n_luego_del_contacto__c.field-meta.xml
<CustomField>
    <fullName>Gener_interacci_n_luego_del_contacto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>HCP genera interacción (preguntas, NO emojis ni agradecimiento general) luego del envío del mensaje original por parte del APM.</inlineHelpText>
    <label>Generó interacción luego del contacto</label>
    <type>Checkbox</type>
</CustomField>