force-app/main/default/objects/Interaccion__c/fields/HoraString__c.field-meta.xml
<CustomField>
    <fullName>HoraString__c</fullName>
    <label>HoraString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>