force-app/main/default/objects/Interaccion__c/fields/Interaccion_generada_por_otra_persona__c.field-meta.xml
<CustomField>
    <fullName>Interaccion_generada_por_otra_persona__c</fullName>
    <formula>IF(AND( CreatedBy.Username !=  Ciclo__r.Owner:User.Username,  RecordType.Name = &quot;Actividad institucional&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interacción generada por otra persona</label>
    <type>Checkbox</type>
</CustomField>