force-app/main/default/objects/Interaccion__c/fields/Profesional_de_la_salud__c.field-meta.xml
<CustomField>
    <fullName>Profesional_de_la_salud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional de la salud</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Profesional de la salud</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Otro profesional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>