force-app/main/default/objects/Interaccion__c/fields/Propietario_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Propietario_de_la_cuenta__c</fullName>
    <formula>Profesional_de_la_salud__r.Owner.FirstName + &apos;  &apos; +  Profesional_de_la_salud__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario de la cuenta</label>
    <type>Text</type>
</CustomField>