force-app/main/default/objects/Interaccion__c/fields/Tiene_archivo_adjunto__c.field-meta.xml
<CustomField>
    <fullName>Tiene_archivo_adjunto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene archivo adjunto</label>
    <type>Checkbox</type>
</CustomField>