force-app/main/default/objects/Interaccion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reunión con Marketing</fullName>
            </value>
            <value>
                <fullName>Reunión con Medical</fullName>
            </value>
            <value>
                <fullName>Reunión con Ventas</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>