force-app/main/default/objects/Interaccion__c/fields/Tipo_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_visita__c</fullName>
    <defaultValue>&quot;Presencial&quot;</defaultValue>
    <label>Tipo de visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
                <default>true</default>
                <label>Presencial</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Telefónica</fullName>
            </value>
            <value>
                <fullName>Ausencia</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Virtual - Telefonica</fullName>
            </value>
            <value>
                <fullName>Virtual - Whatsapp</fullName>
            </value>
            <value>
                <fullName>Virtual -  Email</fullName>
            </value>
            <value>
                <fullName>Virtual - Videollamada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>