force-app/main/default/objects/Interaccion__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>