force-app/main/default/objects/Interaccion__c/fields/Visitador_medico__c.field-meta.xml
<CustomField>
    <fullName>Visitador_medico__c</fullName>
    <formula>Ciclo__r.Owner:User.FirstName + &apos; &apos; +  Ciclo__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitador médico</label>
    <type>Text</type>
</CustomField>