force-app/main/default/objects/Interaccion__c/fields/Visitas_al_profesional_en_el_ciclo__c.field-meta.xml
<CustomField>
    <fullName>Visitas_al_profesional_en_el_ciclo__c</fullName>
    <formula>Ciclo__r.Visitas_totales_realizadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitas al profesional en el ciclo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>