force-app/main/default/objects/Interaccion__c/recordTypes/Actividad_institucional.recordType-meta.xml
<RecordType>
    <fullName>Actividad_institucional</fullName>
    <active>true</active>
    <label>Actividad institucional</label>
</RecordType>