force-app/main/default/objects/Interaccion__c/recordTypes/Visita_medica.recordType-meta.xml
<RecordType>
    <fullName>Visita_medica</fullName>
    <active>true</active>
    <label>Visita médica</label>
</RecordType>