force-app/main/default/objects/Interaccion__c/validationRules/Crear_interaccion_ciclo_no_actual.validationRule-meta.xml
<ValidationRule>
    <fullName>Crear_interaccion_ciclo_no_actual</fullName>
    <active>false</active>
    <description>No se puede crear una Interacción para un Ciclo que no sea el actual.</description>
    <errorConditionFormula>AND( NOT($Profile.Name = &quot;Administrador del sistema&quot;), Ciclo__r.Fecha_de_inicio__c &gt; TODAY()  ||   Ciclo__r.Fecha_de_fin__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Ciclo__c</errorDisplayField>
    <errorMessage>No puede crear una Interacción para un Ciclo que no sea el actual.</errorMessage>
</ValidationRule>