force-app/main/default/objects/Interaccion__c/validationRules/Interaccion_de_lunes_a_viernes.validationRule-meta.xml
<ValidationRule>
    <fullName>Interaccion_de_lunes_a_viernes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0
)</errorConditionFormula>
    <errorMessage>Solo se pueden cargar interacciones de lunes a viernes.</errorMessage>
</ValidationRule>