force-app/main/default/objects/Interaccion__c/validationRules/Mayor_a_7_dias.validationRule-meta.xml
<ValidationRule>
    <fullName>Mayor_a_7_dias</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha__c &lt; TODAY() - 7</errorConditionFormula>
    <errorMessage>No se permite cargar interacción con una antigüedad mayor a 7 días.</errorMessage>
</ValidationRule>