force-app/main/default/objects/Interaccion__c/validationRules/MesDelCiclo.validationRule-meta.xml
<ValidationRule>
    <fullName>MesDelCiclo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(),
OR(
MONTH(Fecha__c)&lt;&gt; MONTH(Ciclo__r.Fecha_de_inicio__c),
MONTH(Fecha__c)&lt;&gt; MONTH(Ciclo__r.Fecha_de_fin__c)
)
)</errorConditionFormula>
    <errorMessage>El mes de la interacción debe coincidir con el mes del ciclo</errorMessage>
</ValidationRule>