force-app/main/default/objects/Interaccion__c/validationRules/Restricciones_de_fecha_en_carga.validationRule-meta.xml
<ValidationRule>
    <fullName>Restricciones_de_fecha_en_carga</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
Fecha__c &lt; (TODAY () - 7),
$Profile.Name = &apos;Visitador médico&apos;
)</errorConditionFormula>
    <errorDisplayField>Fecha__c</errorDisplayField>
    <errorMessage>Se permite solo cargar visitas de hace máximo 7 días.</errorMessage>
</ValidationRule>