force-app/main/default/objects/Interaccion__c/validationRules/Solo_el_propietario_de_la_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_el_propietario_de_la_cuenta</fullName>
    <active>true</active>
    <description>Solo el propietario de la cuenta puede cargar interacciones.</description>
    <errorConditionFormula>AND(ISNEW(),
$User.Id &lt;&gt;Profesional_de_la_salud__r.Owner.Id
)</errorConditionFormula>
    <errorDisplayField>Profesional_de_la_salud__c</errorDisplayField>
    <errorMessage>Solo el propietario de la cuenta puede cargar interacciones.</errorMessage>
</ValidationRule>